@@ -38,10 +38,9 @@ public class ResetFrame extends Frame.WithStreamId
     @Override
     public String toString()
     {
-        return "%s[appError=%d,finalSize=%d]".formatted(
+        return String.format("%s[appError=%d,finalSize=%d]",
             super.toString(),
             getApplicationErrorCode(),
-            getFinalSize()
-        );
+            getFinalSize());
     }
 }
