@@ -78,7 +78,7 @@ public class TransportParameters implements Iterable<Map.Entry<TransportParamete
     @Override
     public String toString()
     {
-        return "%s@%x[%s]".formatted(TypeUtil.toShortName(getClass()), hashCode(), parameters);
+        return String.format("%s@%x[%s]", TypeUtil.toShortName(getClass()), hashCode(), parameters);
     }
 
     /**
@@ -217,15 +217,18 @@ public class TransportParameters implements Iterable<Map.Entry<TransportParamete
         {
             if (this == obj)
                 return true;
-            if (obj instanceof Id<?> that)
+            if (obj instanceof Id<?>)
+            {
+                Id<?> that = (Id<?>)obj;
                 return id == that.id;
+            }
             return false;
         }
 
         @Override
         public String toString()
         {
-            return "%s[%d]".formatted(TypeUtil.toShortName(getClass()), id);
+            return String.format("%s[%d]", TypeUtil.toShortName(getClass()), id);
         }
 
     }
