@@ -71,17 +71,22 @@ public class QuicheStream extends AbstractStream
     public boolean isRemotelyClosed()
     {
         CloseState current = closeState.get();
-        return switch (current)
+        switch (current)
         {
-            case NOT_CLOSED, LOCALLY_CLOSED ->
+            case NOT_CLOSED:
+            case LOCALLY_CLOSED:
             {
                 boolean finished = session.isFinished(this);
                 if (finished)
                     updateCloseState(CloseState.REMOTELY_CLOSED);
-                yield finished;
+                return finished;
             }
-            case REMOTELY_CLOSED, CLOSED -> true;
-        };
+            case REMOTELY_CLOSED:
+            case CLOSED:
+                return true;
+            default:
+                throw new IllegalStateException();
+        }
     }
 
     @Override
@@ -351,12 +356,13 @@ public class QuicheStream extends AbstractStream
             CloseState current = closeState.get();
             switch (current)
             {
-                case NOT_CLOSED ->
+                case NOT_CLOSED:
                 {
                     if (closeState.compareAndSet(current, event))
                         return;
+                    break;
                 }
-                case LOCALLY_CLOSED ->
+                case LOCALLY_CLOSED:
                 {
                     if (event == CloseState.REMOTELY_CLOSED || event == CloseState.CLOSED)
                     {
@@ -366,7 +372,7 @@ public class QuicheStream extends AbstractStream
                     }
                     return;
                 }
-                case REMOTELY_CLOSED ->
+                case REMOTELY_CLOSED:
                 {
                     if (event == CloseState.LOCALLY_CLOSED || event == CloseState.CLOSED)
                     {
@@ -376,7 +382,7 @@ public class QuicheStream extends AbstractStream
                     }
                     return;
                 }
-                case CLOSED ->
+                case CLOSED:
                 {
                     return;
                 }
@@ -597,11 +603,44 @@ public class QuicheStream extends AbstractStream
     @Override
     public String toString()
     {
-        return "%s[%s,writer=%s]".formatted(super.toString(), closeState, writer);
+        return String.format("%s[%s,writer=%s]", super.toString(), closeState, writer);
     }
 
-    private record Writer(boolean last, List<ByteBuffer> buffers, Promise.Invocable<Stream> promise, boolean pending)
+    private static final class Writer
     {
+        private final boolean last;
+        private final List<ByteBuffer> buffers;
+        private final Promise.Invocable<Stream> promise;
+        private final boolean pending;
+
+        private Writer(boolean last, List<ByteBuffer> buffers, Promise.Invocable<Stream> promise, boolean pending)
+        {
+            this.last = last;
+            this.buffers = buffers;
+            this.promise = promise;
+            this.pending = pending;
+        }
+
+        public boolean last()
+        {
+            return last;
+        }
+
+        public List<ByteBuffer> buffers()
+        {
+            return buffers;
+        }
+
+        public Promise.Invocable<Stream> promise()
+        {
+            return promise;
+        }
+
+        public boolean pending()
+        {
+            return pending;
+        }
+
         private static Writer forWriting(boolean last, List<ByteBuffer> buffers, Promise.Invocable<Stream> promise)
         {
             return new Writer(last, buffers, promise, false);
@@ -613,15 +652,32 @@ public class QuicheStream extends AbstractStream
         }
 
         @Override
+        public boolean equals(Object obj)
+        {
+            if (this == obj)
+                return true;
+            if (obj == null || getClass() != obj.getClass())
+                return false;
+            Writer that = (Writer)obj;
+            return last == that.last && pending == that.pending && Objects.equals(buffers, that.buffers) &&
+                Objects.equals(promise, that.promise);
+        }
+
+        @Override
+        public int hashCode()
+        {
+            return Objects.hash(last, buffers, promise, pending);
+        }
+
+        @Override
         public String toString()
         {
-            return "%s@%x[last=%b,pending=%b,buffers=%s]".formatted(
+            return String.format("%s@%x[last=%b,pending=%b,buffers=%s]",
                 TypeUtil.toShortName(getClass()),
                 hashCode(),
                 last,
                 pending,
-                buffers
-            );
+                buffers);
         }
     }
 
