@@ -72,6 +72,6 @@ public abstract class HeaderRule extends Rule
     @Override
     public String toString()
     {
-        return "%s[header:%s=%s]".formatted(super.toString(), getHeaderName(), getHeaderValue());
+        return String.format("%s[header:%s=%s]", super.toString(), getHeaderName(), getHeaderValue());
     }
 }
