@@ -97,6 +97,6 @@ public class RedirectPatternRule extends PatternRule
     @Override
     public String toString()
     {
-        return "%s[redirect:%d>%s]".formatted(super.toString(), getStatusCode(), getLocation());
+        return String.format("%s[redirect:%d>%s]", super.toString(), getStatusCode(), getLocation());
     }
 }
