@@ -25,6 +25,7 @@ import java.nio.charset.UnsupportedCharsetException;
 import java.nio.file.Path;
 import java.security.Principal;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -36,6 +37,7 @@ import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import org.eclipse.jetty.http.ComplianceUtils;
 import org.eclipse.jetty.http.ComplianceViolation;
@@ -358,8 +360,11 @@ public interface Request extends Attributes, Content.Source
     {
         request.addHttpStreamWrapper(stream ->
         {
-            if (stream instanceof CompletionStreamWrapper completionStreamWrapper)
+            if (stream instanceof CompletionStreamWrapper)
+            {
+                CompletionStreamWrapper completionStreamWrapper = (CompletionStreamWrapper)stream;
                 return completionStreamWrapper.addListener(listener);
+            }
             return new CompletionStreamWrapper(stream, listener);
         });
     }
@@ -425,8 +430,11 @@ public interface Request extends Attributes, Content.Source
         if (request == null)
             return null;
         SocketAddress local = request.getConnectionMetaData().getLocalSocketAddress();
-        if (local instanceof InetSocketAddress inetSocketAddress)
+        if (local instanceof InetSocketAddress)
+        {
+            InetSocketAddress inetSocketAddress = (InetSocketAddress)local;
             return getHostName(inetSocketAddress);
+        }
         return local == null ? null : local.toString();
     }
 
@@ -445,8 +453,11 @@ public interface Request extends Attributes, Content.Source
         if (request == null)
             return null;
         SocketAddress remote = request.getConnectionMetaData().getRemoteSocketAddress();
-        if (remote instanceof InetSocketAddress inetSocketAddress)
+        if (remote instanceof InetSocketAddress)
+        {
+            InetSocketAddress inetSocketAddress = (InetSocketAddress)remote;
             return getHostName(inetSocketAddress);
+        }
         return remote == null ? null : remote.toString();
     }
 
@@ -510,7 +521,8 @@ public interface Request extends Attributes, Content.Source
 
         // Is there a local port?
         SocketAddress local = request.getConnectionMetaData().getLocalSocketAddress();
-        if (local instanceof InetSocketAddress inetSocketAddress && inetSocketAddress.getPort() > 0)
+        InetSocketAddress inetSocketAddress = local instanceof InetSocketAddress ? (InetSocketAddress)local : null;
+        if (inetSocketAddress != null && inetSocketAddress.getPort() > 0)
             return inetSocketAddress.getPort();
 
         return -1;
@@ -526,15 +538,15 @@ public interface Request extends Attributes, Content.Source
         if (acceptable.isEmpty())
             return DEFAULT_LOCALES;
 
-        List<Locale> locales = acceptable.stream()
+        List<Locale> locales = Collections.unmodifiableList(acceptable.stream()
             .map(Locale::forLanguageTag)
             .filter(l -> !l.getLanguage().isEmpty())
-            .toList();
+            .collect(Collectors.toList()));
 
         if (locales.isEmpty())
             return DEFAULT_LOCALES;
 
-        List<Locale> known = locales.stream().filter(MimeTypes::isKnownLocale).toList();
+        List<Locale> known = Collections.unmodifiableList(locales.stream().filter(MimeTypes::isKnownLocale).collect(Collectors.toList()));
         if (known.size() == locales.size())
             return known;
         if (known.isEmpty())
@@ -1060,7 +1072,7 @@ public interface Request extends Attributes, Content.Source
         @Override
         public String toString()
         {
-            return "%s@%x{%s}".formatted(TypeUtil.toShortName(getClass()), hashCode(), getWrapped());
+            return String.format("%s@%x{%s}", TypeUtil.toShortName(getClass()), hashCode(), getWrapped());
         }
     }
 
@@ -1077,7 +1089,7 @@ public interface Request extends Attributes, Content.Source
         {
             if (type.isInstance(request))
                 return (T)request;
-            request = request instanceof Request.Wrapper wrapper ? wrapper.getWrapped() : null;
+            request = request instanceof Request.Wrapper ? ((Request.Wrapper)request).getWrapped() : null;
         }
         return null;
     }
@@ -1105,7 +1117,7 @@ public interface Request extends Attributes, Content.Source
                 return null;
             if (type.isInstance(request))
                 return (T)request;
-            request = request instanceof Request.Wrapper wrapper ? wrapper.getWrapped() : null;
+            request = request instanceof Request.Wrapper ? ((Request.Wrapper)request).getWrapped() : null;
         }
         return null;
     }
@@ -1119,8 +1131,9 @@ public interface Request extends Attributes, Content.Source
 
     static Request unWrap(Request request)
     {
-        while (request instanceof Request.Wrapper wrapped)
+        while (request instanceof Request.Wrapper)
         {
+            Request.Wrapper wrapped = (Request.Wrapper)request;
             request = wrapped.getWrapped();
         }
         return request;
@@ -1129,8 +1142,11 @@ public interface Request extends Attributes, Content.Source
     static long getContentBytesRead(Request request)
     {
         Request originalRequest = unWrap(request);
-        if (originalRequest instanceof HttpChannelState.ChannelRequest channelRequest)
+        if (originalRequest instanceof HttpChannelState.ChannelRequest)
+        {
+            HttpChannelState.ChannelRequest channelRequest = (HttpChannelState.ChannelRequest)originalRequest;
             return channelRequest.getContentBytesRead();
+        }
         return -1;
     }
 
@@ -1157,8 +1173,9 @@ public interface Request extends Attributes, Content.Source
      */
     static AuthenticationState getAuthenticationState(Request request)
     {
-        if (request.getAttribute(AuthenticationState.class.getName()) instanceof AuthenticationState authenticationState)
-            return authenticationState;
+        Object authenticationState = request.getAttribute(AuthenticationState.class.getName());
+        if (authenticationState instanceof AuthenticationState)
+            return (AuthenticationState)authenticationState;
         return AuthenticationState.NONE;
     }
 
